# eth-staking

./: .gitignore  .gitmodules  CLAUDE.md  README.md
supervisor/: .gitignore  Pipfile  README.md  docker-compose.test-deps.yml  logging.yaml  mypy.ini  pyproject.toml  requirements.txt  setup.py
supervisor/src/validator_supervisor/: __main__.py  alloy.py  backup_archive.py  cli.py  config.py  control_shell.py  exceptions.py  key_ops.py  promtail.py  setup.py  supervisor.py  test_backup_archive.py  test_eip2335.py  test_integration_supervisor_control_shell.py  test_key_ops.py  test_setup.py  util.py
supervisor/src/validator_supervisor/rpc/: client.py  jsonrpc.py  server.py  test_client.py  test_integration_client_server.py  test_server.py
supervisor/src/validator_supervisor/validators/: base.py
supervisor/test/config/: cert.pem  key.pem  ssh_id.key  ssh_id.pub
supervisor/test/images/lighthouse/: Dockerfile  run.sh  setup.sh  vars.env
supervisor/test/images/ssh/: Dockerfile  ssh_host_ed25519_key  ssh_host_ed25519_key.pub
supervisor/validator_supervisor/: __main__.py  backup_archive.py  cli.py  config.py  control_shell.py  eip2335.py  exceptions.py  promtail.py  setup.py  ssh.py  subprocess.py  supervisor.py  test_config.py  test_eip2335.py  test_integration_supervisor_control_shell.py  test_ssh.py  test_supervisor.py  test_util.py  util.py
supervisor/validator_supervisor/rpc/: auth.py  client.py  jsonrpc.py  server.py  test_integration_client_server.py  test_server.py
supervisor/validator_supervisor/validators/: __init__.py  base.py  lighthouse.py  prysm.py
(+36 files in other folders)
